--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js"
-  },
+     },
+     "scripts": {
+      "dev": "nodemon src/app.js -e js, hbs" 
+   },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,9 +21,12 @@
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.7.4",
-    "npm": "^6.11.3",
+    "npm": "^6.12.0",
     "request": "^2.88.0",
     "to": "^0.2.9",
     "update": "^0.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
