--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "run": "node src/app.js"
      },
      "scripts": {
       "dev": "nodemon src/app.js -e js, hbs" 
