--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+ 
   "scripts": {
-    "run": "node src/app.js"
+    "start": "node src/app.js"    
      },
-     "scripts": {
-      "dev": "nodemon src/app.js -e js, hbs" 
-   },
+     
   "author": "",
   "license": "ISC",
   "dependencies": {
